[workspace]
members = [
    "heim",
    "heim-common",
    "heim-host",
    "heim-cpu",
    "heim-derive",
    "heim-memory",
    "heim-disk",
#    "heim-net",
#    "heim-process",
#    "heim-virt",
#    "heim-winservice",
]

[patch.crates-io]
# awaiting for this PRs to be published
# https://github.com/rust-lang-nursery/futures-rs/pull/1627
# https://github.com/rust-lang-nursery/futures-rs/pull/1618
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "14cf135b41bff10ac4139d914e585e32bacfcd7a" }
