[package]
name = "benchmarks"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
heim = { path = "../heim", features = ["full", "runtime-tokio"] }
futures = "~0.3"
tokio = { version = "~0.2", features = ["rt-threaded"] }
criterion = "~0.3"

[[bench]]
name = "benchmark"
path = "main.rs"
harness = false
