[package]
name = "examples"
version = "0.0.0"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
publish = false
autoexamples = false
autobins = false

[dev-dependencies]
cfg-if = "~1.0"
heim = { path = "../heim", features = ["full"] }
futures-timer = "~3.0"

futures = "~0.3"
smol = "~1.2"
tokio = { version = "~0.3", features = ["full"] }
async-std = { version = "~1.7", features = ["attributes"] }

ptree = { version = "0.3", default-features = false, features = ["ansi"] }
prettytable-rs = "0.8.0"
humantime = "2.0.0"

[[example]]
name = "disk_usage"
path = "disk_usage.rs"

[[example]]
name = "free"
path = "free.rs"

[[example]]
name = "uname"
path = "uname.rs"

[[example]]
name = "top"
path = "top.rs"

[[example]]
name = "pidof"
path = "pidof.rs"

[[example]]
name = "process"
path = "process.rs"

[[example]]
name = "wait"
path = "wait.rs"

[[example]]
name = "uptime"
path = "uptime.rs"

[[example]]
name = "tokio"
path = "tokio.rs"

[[example]]
name = "async_std"
path = "async_std.rs"
