[package]
name = "heim-common"
version = "0.0.8"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Common stuff shared across heim project crates"
keywords = ["heim", "system", "information", "sysinfo", "psutil"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
azure-devops = { project = "heim-rs/heim", pipeline = "heim-rs.heim" }

[dependencies]
cfg-if = "0.1.7"
futures-core-preview = "0.3.0-alpha.19"
futures-util-preview = "0.3.0-alpha.19"
pin-utils = "0.1.0-alpha.4"
libc = "~0.2"
uom = { version = "0.25.0", default-features = false, features = ["autoconvert", "f32", "f64", "u64", "si", "std"] }

[target.'cfg(unix)'.dependencies]
nix = "0.15.0"
lazy_static = "1.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = ">=0.3.8", features = ["winnt", "minwindef", "libloaderapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"
core-foundation = "0.6.4"

[dev-dependencies]
futures-executor-preview = "0.3.0-alpha.19"
version-sync = "0.8"

