[package]
name = "heim-common"
version = "0.1.0-beta.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Common stuff shared across heim project crates"
keywords = ["heim", "system", "information", "sysinfo", "psutil"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
libc = "~0.2"
cfg-if = "~0.1"
futures-core = "^0.3"
futures-util = { version = "^0.3", default-features = false }
pin-utils = "0.1.0-alpha.4"
uom = { version = "0.28.0", default-features = false, features = ["autoconvert", "f32", "f64", "u64", "si", "std"] }
backtrace = { version = "~0.3", optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.17.0"
lazy_static = "1.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = ">=0.3.8", features = ["winnt", "minwindef", "libloaderapi", "handleapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"
core-foundation = "0.7.0"

[dev-dependencies]
futures-executor = "^0.3"
version-sync = "0.8"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
