[package]
name = "heim-cpu"
version = "0.1.0-alpha.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform CPU information"
keywords = ["heim", "system", "cpu", "frequency", "time"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-alpha.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-alpha.1", path = "../heim-runtime" }
futures = { version = "~0.3", default-features = false, features = ["std"] }
lazy_static = "1.3.0"
cfg-if = "~0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "~0.2"
glob = "~0.3"
smol = "~0.1"

[target.'cfg(target_os = "windows")'.dependencies]
ntapi = "~0.3"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = ">=0.3.8"
features = [
    "powerbase",
    "sysinfoapi",
    "minwindef",
    "winnt",
    "winerror",
    "processthreadsapi",
    "impl-default",
    "winbase",
]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "~ 0.2"
mach = "0.3.2"

[dev-dependencies]
heim-derive = { version = "0.1.0-alpha.1", path = "../heim-derive" }
smol = "~0.1"
futures = "~0.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
