[package]
name = "heim-derive"
version = "0.0.4"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Derive macros for heim crates"
keywords = ["heim", "system", "information", "sysinfo", "psutil"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
azure-devops = { project = "heim-rs", pipeline = "heim" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.29"
quote = "0.6.12"

[dependencies.syn]
version = "0.15.39"
# TODO: Remove unused traits when crate will be stable enough to use
features = ["derive", "full", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro"]

[dev-dependencies]
version-sync = "0.8"
