[package]
name = "heim-derive"
version = "0.0.9"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Derive macros for heim crates"
keywords = ["heim", "system", "information", "sysinfo", "psutil"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
azure-devops = { project = "heim-rs/heim", pipeline = "heim-rs.heim" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "~1.0"
quote = "~1.0"
syn = { version = "~1.0", default-features = false, features = ["derive", "full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
version-sync = "0.8"
