[package]
name = "heim-disk"
version = "0.0.3"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform disk information"
keywords = ["heim", "system", "disk", "information"]
categories = ["asynchronous", "os"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
heim-derive = { version = "0.0.3", path = "../heim-derive" }
heim-common = { version = "0.0.3", path = "../heim-common" }
cfg-if = "0.1.7"
bitflags = "1.0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2.58"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "0.4.0"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.7"
features = ["std", "winnt", "ntdef", "fileapi", "handleapi",
            "ioapiset", "winioctl", "impl-default", "errhandlingapi",
            "winerror", "winbase", "ws2def"]

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"
core-foundation = "0.6.4"

[dev-dependencies]
runtime = "0.3.0-alpha.6"

[features]
doc = []

[package.metadata.docs.rs]
features = ["doc"]
