[package]
name = "heim-host"
version = "0.0.9"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform host information"
keywords = ["heim", "system", "host", "uptime", "users"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"
build = "build.rs"

[badges]
maintenance = { status = "experimental" }
azure-devops = { project = "heim-rs/heim", pipeline = "heim-rs.heim" }

[dependencies]
heim-derive = { version = "0.0.9", path = "../heim-derive" }
heim-common = { version = "0.0.9", path = "../heim-common" }
heim-runtime = { version = "0.0.5", path = "../heim-runtime" }
cfg-if = "0.1.7"
platforms = "0.2.0"
libc = "~0.2"

[dev-dependencies]
futures-executor = "^0.3"
version-sync = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
lazy_static = "1.3.0"
mach = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = ">=0.3.8", features = ["sysinfoapi", "libloaderapi", "ws2def", "winbase", "minwindef", "winnt", "ntdef"] }

[features]
runtime-polyfill = ["heim-runtime/runtime-polyfill"]
