[package]
name = "heim-host"
version = "0.1.0-beta.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform host information"
keywords = ["heim", "system", "host", "uptime", "users"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"
build = "build.rs"

[dependencies]
log = "~0.4"
heim-common = { version = "0.1.0-beta.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-beta.1", path = "../heim-runtime" }
cfg-if = "~0.1"
platforms = "0.2.0"
libc = "~0.2"

[dev-dependencies]
heim-derive = { version = "0.1.0-beta.1", path = "../heim-derive" }
futures = "~0.3"
smol = "~0.1"
version-sync = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
lazy_static = "1.3.0"
mach = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = ">=0.3.8", features = ["sysinfoapi", "ws2def", "winbase", "minwindef", "winnt"] }
ntapi = "~0.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
