[package]
name = "heim-memory"
version = "0.0.3"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform memory information"
keywords = ["heim", "system", "information"]
categories = ["asynchronous", "os"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
heim-derive = { version = "0.0.3", path = "../heim-derive" }
heim-common = { version = "0.0.3", path = "../heim-common" }
cfg-if = "0.1.7"

[target.'cfg(target_os = "windows")'.dependencies]
libc = "0.2.58"
winapi = { version = "0.3.7", default-features = false, features = ["minwindef", "sysinfoapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.58"
mach = "0.3.2"
lazy_static = "1.3.0"

[dev-dependencies]
runtime = "0.3.0-alpha.6"

[features]
doc = []

[package.metadata.docs.rs]
features = ["doc"]
