[package]
name = "heim-memory"
version = "0.0.10"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform memory information"
keywords = ["heim", "system", "memory", "swap"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
azure-devops = { project = "heim-rs/heim", pipeline = "heim-rs.heim" }

[dependencies]
heim-common = { version = "0.0.10", path = "../heim-common" }
heim-runtime = { version = "0.0.6", path = "../heim-runtime" }
cfg-if = "~0.1"

[target.'cfg(target_os = "windows")'.dependencies]
libc = "~0.2"
winapi = { version = ">=0.3.8", default-features = false, features = ["minwindef", "sysinfoapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "~0.2"
mach = "0.3.2"
lazy_static = "1.3.0"

[dev-dependencies]
heim-derive = { version = "0.0.10", path = "../heim-derive" }
futures-executor = "^0.3"
tokio = { version = "^0.2", features = ["rt-threaded"] }
async-std = "^1.5"
version-sync = "0.8"

[features]
# Polyfill runtime is enabled by default only to execute examples, tests and benchmarks.
# When used via `heim` facade crate, this feature is disabled.
# See https://github.com/rust-lang/cargo/issues/5015 for details.
default = ["runtime-polyfill"]

runtime-polyfill = ["heim-runtime/runtime-polyfill"]
runtime-tokio = ["heim-runtime/runtime-tokio"]
runtime-async-std = ["heim-runtime/runtime-async-std"]
runtime-gio = ["heim-runtime/runtime-gio"]
