[package]
name = "heim-net"
version = "0.1.0-alpha.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform network information"
keywords = ["heim", "system", "network", "connections", "nic"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-alpha.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-alpha.1", path = "../heim-runtime" }
cfg-if = "~0.1"
bitflags = "^1.0"
macaddr = "1.0"
libc = "~0.2"

[dev-dependencies]
heim-derive = { version = "0.1.0-alpha.1", path = "../heim-derive" }
futures-executor = "^0.3"
tokio = { version = "^0.2", features = ["rt-threaded"] }
async-std = "^1.5"

[target.'cfg(unix)'.dependencies]
nix = "0.17.0"

[features]
# Polyfill runtime is enabled by default only to execute examples, tests and benchmarks.
# When used via `heim` facade crate, this feature is disabled.
# See https://github.com/rust-lang/cargo/issues/5015 for details.
default = ["heim-runtime/runtime-polyfill"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
