[package]
name = "heim-net"
version = "0.1.0-alpha.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform network information"
keywords = ["heim", "system", "network", "connections", "nic"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-alpha.1", path = "../heim-common" }
heim-rt = { path = "../heim-rt" }
cfg-if = "~0.1"
bitflags = "^1.0"
macaddr = "1.0"
libc = "~0.2"

[target.'cfg(unix)'.dependencies]
nix = "0.17.0"

[dev-dependencies]
heim-derive = { version = "0.1.0-alpha.1", path = "../heim-derive" }
smol = "~0.1"
futures = "~0.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
