[package]
name = "heim-net"
version = "0.1.0-beta.2"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform network information"
keywords = ["heim", "system", "network", "connections", "nic"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-beta.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-beta.1", path = "../heim-runtime" }
cfg-if = "~1.0"
bitflags = "^1.0"
macaddr = "1.0"
libc = "~0.2"

[target.'cfg(unix)'.dependencies]
nix = "~0.19"

[dev-dependencies]
heim-derive = { version = "0.1.0-beta.1", path = "../heim-derive" }
smol = "~1.2"
futures = "~0.3"
version-sync = "0.9"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
