[package]
name = "heim-process"
version = "0.1.1-alpha.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform processes information"
keywords = ["heim", "system", "process", "pid"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "actively-developed" }
github-actions = { repository = "heim-rs/heim", workflow = "Tier 1 CI" }

[dependencies]
heim-common = { version = "0.1.0-alpha.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-alpha.1", path = "../heim-runtime", default-features = false }
heim-cpu = { version = "0.1.0-alpha.1", path = "../heim-cpu", default-features = false }
heim-host = { version = "0.1.0-alpha.1", path = "../heim-host", default-features = false }
cfg-if = "~0.1"
libc = "~0.2"
lazy_static = "1.3.0"
ordered-float = { version = "~1.0", default-features = false }
memchr = "^2.2"
async-trait = "~0.1"

[target.'cfg(target_os = "linux")'.dependencies]
heim-net = { version = "0.1.0-alpha.1", path = "../heim-net", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
ntapi = "0.3.3"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = ">=0.3.8"
default-features = false
features = [
    "impl-default",
    "minwindef",
    "winnt",
    "winbase",
    "handleapi",
    "psapi",
    "processthreadsapi",
    "winerror",
    "tlhelp32"
]

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"
darwin-libproc = "0.1.1"

[dev-dependencies]
heim-derive = { version = "0.1.0-alpha.1", path = "../heim-derive" }
futures-executor = "^0.3"
tokio = { version = "^0.2", features = ["rt-threaded"] }
async-std = "^1.5"
version-sync = "0.8"
futures-timer = "^2.0"
which = { version = "^3.1", default-features = false }

[features]
# Polyfill runtime is enabled by default only to execute examples, tests and benchmarks.
# When used via `heim` facade crate, this feature is disabled.
# See https://github.com/rust-lang/cargo/issues/5015 for details.
default = ["heim-runtime/runtime-polyfill"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
