[package]
name = "heim-runtime"
version = "0.1.0-beta.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Runtime shims for heim crate"
keywords = ["heim", "runtime", "shim", "sync"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
license = "Apache-2.0 OR MIT"

[dependencies]
futures = { version = "~0.3", default-features = false, features = ["std"] }
futures-timer = "~3.0"
smol = "~0.1"
version-sync = "0.9.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
