[package]
name = "heim-sensors"
version = "0.0.3"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform sensors information"
keywords = ["heim", "system", "sensor", "temperature", "fan"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
azure-devops = { project = "heim-rs/heim", pipeline = "heim-rs.heim" }

[dependencies]
heim-common = { version = "0.0.8", path = "../heim-common" }
heim-runtime = { version = "0.0.4", path = "../heim-runtime" }
cfg-if = "0.1.10"

[dev-dependencies]
heim-derive = { version = "0.0.8", path = "../heim-derive" }
futures-executor-preview = "0.3.0-alpha.19"
version-sync = "0.8"
pin-utils = "0.1.0-alpha.4"

[features]
runtime-polyfill = ["heim-runtime/runtime-polyfill"]
runtime-async-std = ["heim-runtime/runtime-async-std"]
runtime-tokio = ["heim-runtime/runtime-tokio"]
