[package]
name = "heim-sensors"
version = "0.0.4"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform sensors information"
keywords = ["heim", "system", "sensor", "temperature", "fan"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
azure-devops = { project = "heim-rs/heim", pipeline = "heim-rs.heim" }

[dependencies]
heim-derive = { version = "0.0.9", path = "../heim-derive" }
heim-common = { version = "0.0.9", path = "../heim-common" }
heim-runtime = { version = "0.0.5", path = "../heim-runtime" }
cfg-if = "0.1.9"

[dev-dependencies]
futures-executor = "^0.3"
version-sync = "0.8"

[features]
runtime-polyfill = ["heim-runtime/runtime-polyfill"]
