[package]
name = "heim-sensors"
version = "0.1.0-beta.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform sensors information"
keywords = ["heim", "system", "sensor", "temperature", "fan"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-beta.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-beta.1", path = "../heim-runtime" }
cfg-if = "~1.0"

[dev-dependencies]
heim-derive = { version = "0.1.0-beta.1", path = "../heim-derive" }
smol = "~1.2"
version-sync = "0.9"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
