[package]
name = "heim-virt"
version = "0.1.0-alpha.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform virtualization system detection"
keywords = ["heim", "system", "information"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-alpha.1", path = "../heim-common" }
heim-rt = { path = "../heim-rt" }
cfg-if = "~0.1"
futures = { version = "~0.3", default-features = false, features = ["std", "async-await"] }

[target.'cfg(all(target_os = "linux", any(target_arch="x86", target_arch="x86_64")))'.dependencies]
raw-cpuid = "7.0.3"

[dev-dependencies]
heim-derive = { version = "0.1.0-alpha.1", path = "../heim-derive" }
smol = "~0.1"
tempfile = "3.0"


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
